--- a/index.html
+++ b/index.html
@@ -15,23 +15,36 @@
     
 </head>
 <body>
-    <center>
-        <h1 class="header">
-            Cute Bird
-            <sup>
-                <img src="m2.png">
-            </sup>
-        </h1>
-        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
-<img src="logo.png" class="logo">
-<h3>Descubra o que está acontecendo no mundo</h3>
-<h4>Junte-se ao Cute Bird hoje</h4>
-<div class="form-group">
-<label>Nome de usuário:</label>
-<input type="text" id="user_name" class="form-control" placeholder="Nome de usuário">
-</div>
-<button id="login_button" onclick="addUser()" class="btn btn-primary">entrar</button>
-        </div>
-    </center>
+  <center>
+
+			<h1 class="header">	
+				Cute Bird	<sup>
+				<img src="m2.png">
+				</sup>
+			</h1>
+
+			<div class="col-lg-4 col-md-6 col-sm-6 col-xs-11 login_div">
+
+				<img src="logo.png" class="logo">
+				<h3 >Descubra o que está acontecendo no mundo</h3>
+
+				<h4 >Junte-se ao Cute Bird hoje</h4>
+		
+				<div class="form-group">
+
+		  			<label >Nome de Usuário:</label>
+		 			<!-- caixa de texto para inserir Nome de Usuário-->
+		 			<input type="text" id="user_name" class="form-control" placeholder="Nome de Usuário">
+
+				</div>
+
+				<!--botão entrar-->
+				<button id="login_button" onclick="addUser()" class="btn btn-primary">Entrar</button>
+				<br><br>
+
+			</div>
+
+		</center>
+		<script src="bird.js"></script>
 </body>
 </html>
